tighten up some styling

--- a/src/content/root/research.mdx
+++ b/src/content/root/research.mdx
@@ -6,7 +6,7 @@ hideTitle: true
 image: research/og-image.png
 ---
 
-<ResearchBanner client:load />
+<ResearchBanner client:load /> 
 
 <div className="research-section research-section-preamble">
 
@@ -33,7 +33,7 @@ This document was the product of nearly two years of thinking and journaling and
 
 <FootnoteRef n="2" client:idle>I find that my most profound ideas are often born on the most mundane of days.</FootnoteRef>
 
-**This research syllabus is my first successful attempt at formalizing and sharing my personal values in a way that makes sense to me.** "Research'" is *not at all an important aspect of why I wrote this document*; it's just the form I've decided to wrap my identity and values into at this exact moment in time.<Footnote n="3" client:idle /> While there's a good chance it sticks for a while, I'd also be unsurprised if the ideas I'm presenting here evolve into a completely different / almost unrecognizable form in the future!
+**This research syllabus is my first successful attempt at formalizing and sharing my personal values in a way that makes sense to me.** "Research" is *not at all an important aspect of why I wrote this document*; it's just the form I've decided to wrap my identity and values into at this exact moment in time.<Footnote n="3" client:idle /> While there's a good chance it sticks for a while, I'd also be unsurprised if the ideas I'm presenting here evolve into a completely different / almost unrecognizable form in the future!
 
 <FootnoteRef n="3" client:idle>More generally, I'm a big fan of value-driven goal setting. In other words, what I'm doing matters much less than understanding why I'm doing it in the first place!</FootnoteRef> 
 
@@ -137,7 +137,7 @@ The concept of 'personal agency' has been around for quite some time, probably h
 
 In a more modern sense, I've noticed an increase in the usage of 'agency' over the last few years to describe one's ability to narrow the delta between where they currently are and the future self they strive to become (and the future world they want to live in).<Footnote n="6" client:idle />
 
-<FootnoteRef n="6" client:idle>And, somewhat relatedly, the rise of 'agentic AI' as a design pattern. But that's a topic for future post. :)</FootnoteRef>
+<FootnoteRef n="6" client:idle>And, somewhat relatedly, the rise of 'agentic AI' as a design pattern. But that's a topic for a future post. :)</FootnoteRef>
 
 Although my current understanding of agency is rather limited, I've enjoyed reading some of [Cate Hall](https://usefulfictions.substack.com/p/how-to-be-more-agentic)'s recent essays as a starting point in my exploration. Her primary definition of agency revolves around this idea:
 
@@ -154,7 +154,7 @@ Borrowing her definition, my research practice could be framed as an exercise of
 ### Research as a post-LLM cultural shift
 Now that large language models (LLM's) have *almost*<Footnote n="7" client:idle /> democratized access to information, cultural emphasis seems to be shifting more towards the **curation** and **application** of knowledge over acquiring and presenting it as-is. If this shift is valid, it suggests research will become even more valuable over the next several years.
 
-<FootnoteRef n="7" client:idle>There are still lots of problematic bits of existing LLM's (especially around issues of safety and factual correctness, such as [syncophancy](https://www.seangoedecke.com/ai-sycophancy/)). But at this point it's hard to deny the tremendous benefit they've provided of basically indexing all of recorded human knowledge in an easily-queryable fashion.</FootnoteRef>
+<FootnoteRef n="7" client:idle>There are still lots of problematic bits of existing LLM's (especially around issues of safety and factual correctness, such as [sycophancy](https://www.seangoedecke.com/ai-sycophancy/)). But at this point it's hard to deny the tremendous benefit they've provided of basically indexing all of recorded human knowledge in an easily-queryable fashion.</FootnoteRef>
 
 Several aspects of research that could aid in this culture shift include:
 - **Quality over quantity**: Writing a super long essay no longer holds the proof-of-work validity it once implied. (If anything, the burden's now on long-form writers to prove that they *didn't* AI-generate it!) I find myself valuing **human curation** of sparse ideas into dense, highly meaningful artifacts that point me in the right direction while helping me *understand why I care* and *how I should feel about it*. Reading the work of great researchers is one of my primary feeds for highly-curated knowledge.
@@ -297,7 +297,7 @@ With that preface out of the way, there are quite a few problems I feel both exc
   - While I expect much of the solution to simply involve clever applications of well-understood systems patterns (particularly around observability), I anticipate there's quite a bit of room for original thinking here.
   - Heterogeneous compute may also serve as a key technology for democratizing machine learning research. By enabling faster, easier to use, more flexible hardware access, we ensure that compute power doesn't get monopolized by a small number of very powerful companies.
 - **How can we build fault-tolerant training pipelines that minimize human-time and compute-time wastage from hardware failure?** GPUs are currently far more expensive and far more unreliable than CPUs, and yet many training jobs are all-or-nothing (in that if one GPU fails out of thousands, the entire job could fail). What knowledge can we apply from the last 50 years of distributed systems engineering to solve this class of emergent reliability problems?
-- **What is the minimal set of knowledge needed to bridge the gap from matrix multiplication to model training?** More specifically, the next major iteration of [TurtleNet](https://bencuan.me/blog/turtlenet) seems to me like a graduation from talking about homelabs to designing infrastructure for million-dollar GPU clusters. I'd like to fill in my own knowledge gaps so I can be more effective in my work-- but it'd also be awesome to package up that knowledge in a digestable way for others to follow along.
+- **What is the minimal set of knowledge needed to bridge the gap from matrix multiplication to model training?** More specifically, the next major iteration of [TurtleNet](https://bencuan.me/blog/turtlenet) seems to me like a graduation from talking about homelabs to designing infrastructure for million-dollar GPU clusters. I'd like to fill in my own knowledge gaps so I can be more effective in my work-- but it'd also be awesome to package up that knowledge in a digestible way for others to follow along.
 </BigQuestionsBox>
 
 <ReadingListBox client:load>
@@ -349,7 +349,7 @@ For the last couple years, I've gained meaningful firsthand experience working w
 - [A Brief Introduction to Digital Anthropology](https://maggieappleton.com/digital-anthropology) - Maggie Appleton (and, some selections from her [reading list](https://maggieappleton.com/digital-anth-books))
 
 **Silicon Valley Culture**
-- [City of the Witch: Enchantment, Terror, and Deliverance in the City of Love](https://www.goodreads.com/book/show/12352452-season-of-the-witch): historical accounts from San Francisco's cultural revolution of the 60's and 70's; pride, drugs, hippies, rock & roll, political assassinations, and much more.
+- [Season of the Witch: Enchantment, Terror, and Deliverance in the City of Love](https://www.goodreads.com/book/show/12352452-season-of-the-witch): historical accounts from San Francisco's cultural revolution of the 60's and 70's; pride, drugs, hippies, rock & roll, political assassinations, and much more.
 - [Paul Graham's Essays](https://paulgraham.com/articles.html): the definitive thinkpieces that have an outsized impact on Silicon Valley discourse.
 - [Jasmine Sun's Substack](https://jasmi.news/): live reporting on SF tech culture, China, and much more; a self-described [anthropology of disruption](https://jasmi.news/p/statement-of-purpose).
 - [Everyone here is in a cult](https://usefulfictions.substack.com/p/everyone-here-is-in-a-cult?triedRedirect=true) - Cate Hall
@@ -470,6 +470,6 @@ I have a lot of related writing that I'll release on this blog (and elsewhere on
 
 For sketchier notes and random fun things, check out the [Garden](https://garden.bencuan.me/)-- you can leave a message in the guestbook there too, if you'd like.
 
-<iframe src="https://bencuan.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white; display:block; margin:0 auto;" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://bencuan.substack.com/embed" width="480" height="150" style="border:1px solid #EEE; background:white; display:block; margin:0 auto; max-width:100%;" frameborder="0" scrolling="no"></iframe>
 
 </div>
