more minor styling

--- a/src/content/root/research.mdx
+++ b/src/content/root/research.mdx
@@ -131,7 +131,7 @@ As of today, I've assembled a small collection of frameworks about individual to
 
 The concept of 'personal agency' has been around for quite some time, probably having originated from [Aristotle's philosophy on action](https://academic.oup.com/edited-volume/42642/chapter/358147424).
 
-> [!quote] In very general terms, an agent is a being with the capacity to act, and ‘agency’ denotes the exercise or manifestation of this capacity.
+> In very general terms, an agent is a being with the capacity to act, and ‘agency’ denotes the exercise or manifestation of this capacity.
 > 
 > --From the [Stanford Encyclopedia of Philosophy](https://plato.stanford.edu/entries/agency/)
 
